<resources>
    <string name="app_name">Project</string>
    <string name="welcome_message">Welcome!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="set_photo_recognition">Set photo recognition</string>
    <string name="set_voice_recognition">Set voice recognition</string>
    <string name="register_now">Register now</string>
    <string name="submit">Submit</string>
</resources>