<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270dp"
        android:layout_height="294dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/faceRecognitionBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/set_photo_recognition"
            app:backgroundTint="#9682C8" />

        <Button
            android:id="@+id/voiceRecognitionBtn"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:text="@string/set_voice_recognition"
            app:backgroundTint="#9682C8" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:text="@string/register_now"
        app:backgroundTint="#A1113D51"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>